--- a/about-us.html
+++ b/about-us.html
@@ -1,8 +1,7 @@
 ---
 layout: article
-title: 'Перечень услуг'
+title: 'СРОЧНЫЙ ВЫКУП АВТО'
 ---
-
 <h4>Мы обслуживаем жителей Москвы и Московской области </h4>
 <p>Бывает ситуация, когда нужно срочно продать автомобиль. По разным причинам: желание приобрести новую модель авто, срочно нужны наличные средства, серьезные поломки автомобиля в результате ДТП и многое другое. Однако, найти клиента на выкуп авто сложно, особенно если речь идет о продаже машины в аварийном состоянии или устаревшей отечественной модели.</p>
 <p>Наша компания предлагает Вам выкуп автомобилей быстро и на выгодных условиях.  У нас есть опытные автомеханики, которые в удобное для Вас время приедут и оценят Ваш автомобиль. Наши юристы быстро оформят сделку купли-продажи в строгом соответствии с действующим законодательством. При этом услуги юристов, оценщиков, эвакуатора для наших клиентов бесплатны.</p>
