--- a/index.html
+++ b/index.html
@@ -1,3 +1,31 @@
 ---
 layout: default
 ---
+
+<div class="b-item b-item_main">
+  <h2 class="b-item__title">
+    <a href="{{site.baseurl}}about-us.html" class="b-item__link">СРОЧНЫЙ ВЫКУП АВТО</a>
+  </h2>
+  <!-- /.b-item__title -->
+  <div class="b-item__text editor">
+    <h4>Мы обслуживаем жителей Москвы и Московской области</h4>
+
+    <p>Бывает ситуация, когда нужно срочно продать автомобиль. По разным причинам: желание приобрести новую модель авто, срочно нужны наличные средства, серьезные поломки автомобиля в результате ДТП и многое другое. Однако, найти клиента на выкуп авто сложно, особенно если речь идет о продаже машины в аварийном состоянии или устаревшей отечественной модели.</p>
+
+    <p>Наша компания предлагает Вам выкуп автомобилей быстро и на выгодных условиях. У нас есть опытные автомеханики, которые в удобное для Вас время приедут и оценят Ваш автомобиль. Наши юристы быстро оформят сделку купли-продажи в строгом соответствии с действующим законодательством. При этом услуги юристов, оценщиков, эвакуатора для наших клиентов бесплатны.</p>
+
+    <p>В услугу по срочному выкупу автомобилей вклчен не только моментальный выезд специалистов и оформление документов – обратившись к нам, Вы уже через пару часов сможете получить на руки до 90% наличных средств за Вашу машину.</p>
+
+    <p>Наши юристы также возьмут на себя решение вопросов с документацией, если таковые есть у Вашего автомобиля (требуется поставить его на учет в ГИБДД или снять с него).</p>
+
+    <p>Для того, чтобы заказать услугу, позвоните нам по телефону +7-926-06-06-444 или сделайте онлайн-заявку на срочный выкуп автомобиля. В каком бы состоянии ни находился Ваш автомобиль (подержанный, требующий капитального ремонта, подлежащий списанию), какого он года выпуска, отечественной или зарубежной марки, Вы можете рассчитывать на заключение честной, легальной сделки и получение наличных средств в кратчайшие сроки.</p>
+
+    <p>С наилучшими пожеланиями!</p>
+    <a href="{{site.baseurl}}">www.avtovikup77.ru</a>
+  </div>
+  <!-- /.b-item__text -->
+  <a href="{{site.baseurl}}about-us.html" class="b-item__more">
+    Подробнее
+  </a>
+</div>
+        <!-- /.b-item -->
